--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="We Coffee Team">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=block" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Salgaderia Lá Favorita</title>
 </head>
@@ -41,13 +41,12 @@
         </section>
     </header>
 
-    <div class="home-container">
-        <section id="home">
+    <div class="background-section" id="home">
+        <section id="hero-bg">
             <div class="content">
                 <h3>O sabor que conquista no primeiro pedaço.</h3>
                 <p>Na <strong>Salgaderia Lá Favorita</strong>, cada massa é feita com ingredientes selecionados, carinho
-                    e aquele toque artesanal
-                    que faz toda a diferença. Perfeito para festas, eventos ou para matar a fome com qualidade e sabor!
+                    e aquele toque artesanal que faz toda a diferença. Perfeito para festas, eventos com qualidade e sabor!
                 </p>
                 <a href="#menu" class="btn">Pegue o seu Agora</a>
             </div>
@@ -66,8 +65,7 @@
                 <img src="./assets/nhoque batata asterix.jpeg" alt="Imagem nhoque de batata asterix">
                 <h3>GNOCCHI DE BATATA ASTERIX</h3>
                 <p class="descricao-menu">Gnocchi macio, feito com batata Asterix, farinha refinada e um toque de
-                    noz-moscada. Sabor
-                    suave e combina com molhos clássicos e sofisticados.</p>
+                    noz-moscada. Sabor suave e combina com molhos clássicos e sofisticados.</p>
                 <div class="price">R$20 - 450gr <br></div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
@@ -75,8 +73,7 @@
                 <img src="./assets/nhoque batata asterix.jpeg" alt="Imagem nhoque de batata e parmesão">
                 <h3>GNOCCHI DE BATATA E PARMESÃO</h3>
                 <p class="descricao-menu">Preparado com batata Asterix, parmesão curado e um toque de noz-moscada. Tem
-                    textura leve e
-                    sabor marcante, combina com molhos cremosos, sugo, ou manteiga com ervas. </p>
+                    textura leve e sabor marcante, combina com molhos cremosos, sugo, ou manteiga com ervas. </p>
                 <div class="price">R$28 - 450gr <br></div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
@@ -84,8 +81,7 @@
                 <img src="./assets/nhoque banana da terra.jpg" alt="Imagem nhoque de banana-da-terra">
                 <h3>GNOCCHI DE BANANA-DA-TERRA</h3>
                 <p class="descricao-menu">Gnocchi leve e nutritivo, feito com banana-da-terra assada, farinha sem
-                    glúten, azeite e sal
-                    rosa. De textura macia e sabor levemente adocicado, combina com molho pesto de manjericão
+                    glúten, azeite e sal rosa. De textura macia e sabor levemente adocicado, combina com molho pesto de manjericão
                     ou peixes grelhados. Uma escolha criativa e saudável.</p>
                 <div class="price">R$28 - 450gr <br></div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
@@ -95,7 +91,7 @@
                 <h3>RONDELLI DE TOMATE SECO</h3>
                 <p class="descricao-menu">Massa artesanal recheada com ricota cremoso, espinafre fresco e nozes. Não
                     pode ser descongelado</p>
-                <div class="price">R$45 - 500gr <br></div>
+                <div class="price">R$28 - 450gr <br></div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
             <div class="box">
@@ -118,19 +114,16 @@
                 <img src="./assets/sorrentino.jpeg" alt="Imagem sorrentino de muçarela com manjeiricão">
                 <h3>SORRENTINO DE MUÇARELA COM MANJEIRICÃO</h3>
                 <p class="descricao-menu">Massa artesanail recheada com uma combinação clássica e irresistível de
-                    muçarela e
-                    manjeiricão fresco</p>
+                    muçarela e manjeiricão fresco</p>
                 <div class="price">R$44,90 - 500gr <br></div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
-            <!-- <div class="box">
-                <img src="./assets/menu6.png" alt="Misto da Colheita">
-                <h3>Misto da Colheita</h3>
-                <div class="price">R$ 11,20 <span>R$ 15,99</span></div>
-                <button class="btn add-to-cart" data-name="Misto da Colheita" data-price="11.20">Adicione ao
-                    Carrinho</button>
-            </div> -->
         </div>
+    </section>
+
+    <section class="modo-de-preparo" id="preparo">
+        <h1 class="title-2">MODO DE <span-2>PREPARO</span-2></h1>
+        <a href="https://drive.google.com/drive/folders/1bNKaHKU_ev5noLwzD0QecnWe2CE0dGSq?usp=sharing" class="btn-2" target="_blank">Veja aqui</a>
     </section>
 
     <section class="review" id="review">
@@ -202,14 +195,12 @@
     </section>
 
     <section class="address-info" id="address">
-    <div class="address-info">
         <h3>
             <img width="30" height="30" src="https://img.icons8.com/ios/50/505A42/place-marker--v1.png" alt="place-marker--v1"/>
             NOSSO <span>ENDEREÇO</span>
         </h3>
         <p>Camorim - RJ</p>
-    </div>
-</section>
+    </section>
 
     <section class="footer">
         <div class="share">
@@ -232,7 +223,7 @@
     <!-- Modal do Carrinho -->
     <div id="cart-modal" class="cart-modal">
         <div class="cart-modal-content">
-            <span class="close-modal">&times;</span>
+            <span class="close-modal">×</span>
             <h2>Seu Carrinho</h2>
             <div id="cart-items"></div>
             <div class="cart-total">
