--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="We Coffee - O melhor café da região, com grãos raros e extrações meticulosas. Descubra sabores únicos em um ambiente aconchegante.">
-    <meta name="keywords" content="café, espresso, cold brew, confeitaria, We Coffee">
-    <meta name="author" content="We Coffee Team">
+    <meta name="description" content="Salgaderia Lá Favorita - Massas artesanais com ingredientes selecionados, perfeitas para qualquer ocasião.">
+    <meta name="keywords" content="salgaderia, massas artesanais, gnocchi, rondelli, Salgaderia Lá Favorita">
+    <meta name="author" content="Malu Pinheiro">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=block" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Salgaderia Lá Favorita</title>
 </head>
-
 <body>
     <header class="header">
         <section>
@@ -24,7 +21,7 @@
                 <span></span>
             </button>
             <a href="#home" class="logo">
-                <img src="./assets/sublogo.png" alt="Logo Cafena" width="80" height="70">
+                <img src="./assets/sublogo.png" alt="Logo Salgaderia Lá Favorita" width="80" height="80">
             </a>
             <nav class="navbar">
                 <a href="#home">Home</a>
@@ -33,10 +30,8 @@
                 <a href="#address">Endereço</a>
             </nav>
             <div class="icons">
-                <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/505a42/search--v1.png"
-                    alt="Ícone de busca">
-                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/fff2e9/shopping-cart--v1.png"
-                    alt="Ícone de carrinho de compras" id="open-cart">
+                <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/505a42/search--v1.png" alt="Ícone de busca">
+                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/fff2e9/shopping-cart--v1.png" alt="Ícone de carrinho" id="open-cart">
             </div>
         </section>
     </header>
@@ -45,9 +40,7 @@
         <section id="hero-bg">
             <div class="content">
                 <h3>O sabor que conquista no primeiro pedaço.</h3>
-                <p>Na <strong>Salgaderia Lá Favorita</strong>, cada massa é feita com ingredientes selecionados, carinho
-                    e aquele toque artesanal que faz toda a diferença. Perfeito para festas, eventos com qualidade e sabor!
-                </p>
+                <p>Na <strong>Salgaderia Lá Favorita</strong>, cada massa é feita com ingredientes selecionados, carinho e aquele toque artesanal que faz toda a diferença. Perfeito para festas, eventos com qualidade e sabor!</p>
                 <a href="#menu" class="btn">Pegue o seu Agora</a>
             </div>
         </section>
@@ -62,165 +55,132 @@
         <h2 class="title">Nosso <span>Menu</span></h2>
         <div class="box-container">
             <div class="box">
-                <img src="./assets/nhoque batata asterix.jpeg" alt="Imagem nhoque de batata asterix">
+                <img src="./assets/nhoque batata asterix.jpeg" alt="Gnocchi de Batata Asterix">
                 <h3>GNOCCHI DE BATATA ASTERIX</h3>
-                <p class="descricao-menu">Gnocchi macio, feito com batata Asterix, farinha refinada e um toque de
-                    noz-moscada. Sabor suave e combina com molhos clássicos e sofisticados.</p>
-                <div class="price">R$20 - 450gr <br></div>
+                <p class="descricao-menu">Gnocchi macio, feito com batata Asterix, farinha refinada e um toque de noz-moscada. Sabor suave e combina com molhos clássicos e sofisticados.</p>
+                <div class="price">R$20 - 450gr</div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
             <div class="box">
-                <img src="./assets/nhoque batata asterix.jpeg" alt="Imagem nhoque de batata e parmesão">
+                <img src="./assets/nhoque batata asterix.jpeg" alt="Gnocchi de Batata e Parmesão">
                 <h3>GNOCCHI DE BATATA E PARMESÃO</h3>
-                <p class="descricao-menu">Preparado com batata Asterix, parmesão curado e um toque de noz-moscada. Tem
-                    textura leve e sabor marcante, combina com molhos cremosos, sugo, ou manteiga com ervas. </p>
-                <div class="price">R$28 - 450gr <br></div>
+                <p class="descricao-menu">Preparado com batata Asterix, parmesão curado e um toque de noz-moscada. Tem textura leve e sabor marcante, combina com molhos cremosos, sugo, ou manteiga com ervas.</p>
+                <div class="price">R$28 - 450gr</div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
             <div class="box">
-                <img src="./assets/nhoque banana da terra.jpg" alt="Imagem nhoque de banana-da-terra">
+                <img src="./assets/nhoque banana da terra.jpg" alt="Gnocchi de Banana-da-Terra">
                 <h3>GNOCCHI DE BANANA-DA-TERRA</h3>
-                <p class="descricao-menu">Gnocchi leve e nutritivo, feito com banana-da-terra assada, farinha sem
-                    glúten, azeite e sal rosa. De textura macia e sabor levemente adocicado, combina com molho pesto de manjericão
-                    ou peixes grelhados. Uma escolha criativa e saudável.</p>
-                <div class="price">R$28 - 450gr <br></div>
+                <p class="descricao-menu">Gnocchi leve e nutritivo, feito com banana-da-terra assada, farinha sem glúten, azeite e sal rosa. De textura macia e sabor levemente adocicado, combina com molho pesto de manjericão ou peixes grelhados. Uma escolha criativa e saudável.</p>
+                <div class="price">R$28 - 450gr</div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
             <div class="box">
-                <img src="./assets/rondelli tomate seco.jpeg" alt="Imagem rondelli de tomate seco">
+                <img src="./assets/rondelli tomate seco.jpeg" alt="Rondelli de Tomate Seco">
                 <h3>RONDELLI DE TOMATE SECO</h3>
-                <p class="descricao-menu">Massa artesanal recheada com ricota cremoso, espinafre fresco e nozes. Não
-                    pode ser descongelado</p>
-                <div class="price">R$28 - 450gr <br></div>
+                <p class="descricao-menu">Massa artesanal recheada com ricota cremoso, espinafre fresco e nozes. Não pode ser descongelado.</p>
+                <div class="price">R$28 - 450gr</div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
             <div class="box">
-                <img src="./assets/rondelli ricota.jpeg" alt="Imagem rondelli de ricota, espinafre fresco e nozes">
+                <img src="./assets/rondelli ricota.jpeg" alt="Rondelli de Ricota com Espinafre">
                 <h3>RONDELLI DE RICOTA COM ESPINAFRE</h3>
-                <p class="descricao-menu">Massa artesanal recheada com ricota cremoso, espinafre fresco e nozes. Não
-                    pode ser descongelado</p>
-                <div class="price">R$45 - 500gr <br></div>
+                <p class="descricao-menu">Massa artesanal recheada com ricota cremoso, espinafre fresco e nozes. Não pode ser descongelado.</p>
+                <div class="price">R$45 - 500gr</div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
             <div class="box">
-                <img src="./assets/canelone-de-presunto-e-queijo.jpg" alt="Imagem cannelloni de presunto e muçarela">
+                <img src="./assets/canelone-de-presunto-e-queijo.jpg" alt="Cannelloni de Presunto e Muçarela">
                 <h3>CANNELLONI DE PRESUNTO E MUÇARELA</h3>
-                <p class="descricao-menu">Massa artesanal recheada com a dupla perfeita de presunto e muçarela. Não pode
-                    ser descongelado</p>
-                <div class="price">R$41,90 - 500gr <br></div>
+                <p class="descricao-menu">Massa artesanal recheada com a dupla perfeita de presunto e muçarela. Não pode ser descongelado.</p>
+                <div class="price">R$41,90 - 500gr</div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
             <div class="box">
-                <img src="./assets/sorrentino.jpeg" alt="Imagem sorrentino de muçarela com manjeiricão">
+                <img src="./assets/sorrentino.jpeg" alt="Sorrentino de Muçarela com Manjericão">
                 <h3>SORRENTINO DE MUÇARELA COM MANJEIRICÃO</h3>
-                <p class="descricao-menu">Massa artesanail recheada com uma combinação clássica e irresistível de
-                    muçarela e manjeiricão fresco</p>
-                <div class="price">R$44,90 - 500gr <br></div>
+                <p class="descricao-menu">Massa artesanal recheada com uma combinação clássica e irresistível de muçarela e manjericão fresco.</p>
+                <div class="price">R$44,90 - 500gr</div>
                 <p class="descricao-2">(serve 2/3 pessoas)</p>
             </div>
         </div>
     </section>
 
-    <section class="modo-de-preparo" id="preparo">
+    <section class="modo-de-preparo" id="modo-de-preparo">
         <h1 class="title-2">MODO DE <span-2>PREPARO</span-2></h1>
-        <a href="https://drive.google.com/drive/folders/1bNKaHKU_ev5noLwzD0QecnWe2CE0dGSq?usp=sharing" class="btn-2" target="_blank">Veja aqui</a>
+        <a href="#" class="btn-2">Veja aqui</a>
     </section>
 
     <section class="review" id="review">
-        <h2 class="title">O QUE NOSSOS CLIENTES DIZEM</h2>
+        <h2 class="title">O QUE NOSSOS <span>CLIENTES DIZEM</span></h2>
         <div class="box-container">
             <div class="box">
                 <img src="./assets/image-removebg-preview.png" alt="Ícone de citação">
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias quaerat ut incidunt
-                    commodi at praesentium expedita ad consequatur minus possimus id exercitationem sunt"</p>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias quaerat ut incidunt commodi at praesentium expedita ad consequatur minus possimus id exercitationem sunt"</p>
                 <img src="./assets/pic1.png" alt="Foto de Carlos M." class="user">
                 <h3>Carlos M.</h3>
                 <div class="stars">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffee00/star-half-empty.png"
-                        alt="Estrela meia cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffee00/star-half-empty.png" alt="Estrela meia cheia">
                 </div>
             </div>
             <div class="box">
                 <img src="./assets/image-removebg-preview.png" alt="Ícone de citação">
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias quaerat ut incidunt
-                    commodi at praesentium expedita ad consequatur minus possimus id exercitationem sunt"</p>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias quaerat ut incidunt commodi at praesentium expedita ad consequatur minus possimus id exercitationem sunt"</p>
                 <img src="./assets/pic2.png" alt="Foto de Juliana R." class="user">
                 <h3>Juliana R.</h3>
                 <div class="stars">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffee00/star-half-empty.png"
-                        alt="Estrela meia cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Estrela cheia">
+                    <img width="https://img.icons8.com/ios/glyphs/30/ffee00/star--s.png" alt="s">
                 </div>
             </div>
             <div class="box">
                 <img src="./assets/image-removebg-preview.png" alt="Ícone de citação">
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias quaerat ut incidunt
-                    commodi at praesentium expedita ad consequatur minus possimus id exercitationem sunt"</p>
-                <img src="./assets/pic3.png" alt="Foto de Pedro S." class="user">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias quaerat ut incidunt commodi at praesentium expedita ad consequatur minus possimus id exercitationem sunt"</p>
+                <img src="./assets/pics3.png" alt="Foto de Pedro S." class="user">
                 <h3>Pedro S.</h3>
                 <div class="stars">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png"
-                        alt="Estrela cheia">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffee00/star-half-empty.png"
-                        alt="Estrela meia cheia">
+                    <img width="30" height="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Star--v1">
+                    <img width="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Star--v1">
+                    <img width="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Star--v1">
+                    <img width="https://img.icons8.com/ios-filled/30/ffee00/star--v1.png" alt="Star--v1>
+                    <img width="https://img.icons8.com/ios/glyphs/30/ffee00/star-half-empty.png" alt="Star-half-empty">
                 </div>
             </div>
         </div>
     </section>
 
     <section class="contact" id="contact">
-        <h1 class="title">Quer saborear o melhor da nossa <span>cozinha</span>?</h1>
-        <a href="https://wa.me/5521988190687" class="btn" target="_blank">Faça seu pedido</a>
+        <h1 class="title">Quer saborear o <span>melhor da nossa</span> cozinha?</h1>
+        <a href="https://wa.me/5521988190687" target="_blank" class="btn">Faça seu pedido</a>
     </section>
 
     <section class="address-info" id="address">
-        <h3>
-            <img width="30" height="30" src="https://img.icons8.com/ios/50/505A42/place-marker--v1.png" alt="place-marker--v1"/>
-            NOSSO <span>ENDEREÇO</span>
-        </h3>
+        <h3><img width="30" height="30" src="https://img.icons8.com/ios/50/505A42/place-marker--v1.png" alt="place-marker--v1"/>NOSSO <span>ENDEREÇO</span></h3>
         <p>Camorim - RJ</p>
     </section>
 
     <section class="footer">
         <div class="share">
             <a href="https://www.instagram.com/salgaderialafavorita/" target="_blank">
-                <img width="40" height="40" src="https://img.icons8.com/ios-glyphs/30/505a42/instagram-new.png"
-                    alt="Instagram">
+                <img width="40" height="40" src="https://img.icons8.com/ios-glyphs/30/505a42/instagram-new.png" alt="Instagram">
             </a>
             <a href="https://wa.me/5521988190687" target="_blank">
-                <img width="39" height="39" src="https://img.icons8.com/ios-filled/50/505a42/whatsapp--v1.png"
-                    alt="whatsapp--v1" />
+                <img width="39" height="39" src="https://img.icons8.com/ios-filled/50/505a42/whatsapp--v1.png" alt="WhatsApp">
             </a>
         </div>
         <div class="contact-info">
             <p>© 2025 Salgaderia Lá Favorita. Todos os direitos reservados.</p>
-            <p>Desenvolvido por <a href="https://malupinheiro.netlify.app/" target="_blank"><span
-                        class="developer-name">Malu Pinheiro</span></a></p>
+            <p>Desenvolvido por <a href="https://malupinheiro.netlify.app/" target="_blank"><span class="developer-name">Malu Pinheiro</span></a></p>
         </div>
     </section>
 
-    <!-- Modal do Carrinho -->
     <div id="cart-modal" class="cart-modal">
         <div class="cart-modal-content">
             <span class="close-modal">×</span>
@@ -235,5 +195,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
